Final touch / Refacto

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,13 @@
     <!-- Body -->
     <h1>Snake</h1>
     <h2>Score : <span class="score"></span></h2>
+    <div class="gameover">
+      <h2>Game Over !</h2>
+      <button class="restart">Restart</button>
+    </div>
+    <div class="paused">
+      <h2>Paused !</h2>
+    </div>
     <canvas id="canvas" width="500" height="500"> </canvas>
   </body>
 </html>
